[tool.poetry]
name = "vector-conf-api"
version = "0.1.0"
description = "API for Timber.io Vector config"
authors = ["danwin <dmitry.zimoglyadov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
toml = "^0.10.1"
sqlalchemy = "^1.3.19"
databases = "^0.3.2"
uvicorn = "^0.11.8"
typing_extensions = "^3.7.4"
ansible = "^2.9.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
